# Clawtalk

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  INTRODUCTION.md  LICENSE  README.md  SECURITY.md  SKILL.md  TERMS_OF_SERVICE.md  TRADEMARKS.md  demo.sh  docker-compose.local.yml  docker-compose.yml  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
Clawtalk_website/: index.html  metadata.json
Clawtalk_website/src/: App.tsx  index.css
LICENSES/: COMMERCIAL.txt
cli/: agent-msg.ts  openclaw-social.ts
cli/openclaw-social/: constants.ts  dispatcher.ts  persistence.ts  seen-state.ts  types.ts  usage.ts  watcher-preferences.ts
docs/: backup-and-restore.md  openapi.yaml  pending-issues.md  project-status.md  release-checklist.md  release-signoff-2026-04-14.md
docs/legal/: trademark-registration-checklist.md
docs/postman/: AgentSocial.postman_collection.json  AgentSocial.postman_environment.json
examples/: run_agent.ts
scripts/: backup.sh  dev-local.sh  install-openclaw.ps1  install-openclaw.sh  local-env.sh  preflight.sh  run-local-tests.sh
sdk/python/: README.md  agent_social.py  pyproject.toml
skill/: agent_social_skill.ts
src/: app.ts  config.ts  server.ts
src/db/: migrate.ts  pool.ts
src/infra/: audit.ts  email.ts  redis.ts  ttl-cleanup.ts
src/middleware/: authenticate-owner.ts  authenticate.ts  require-admin.ts
tests/: inbox.cli.test.ts  integration.test.ts  notify-pref.cli.test.ts  task.cli.test.ts  watcher-preferences.test.ts
(+50 files in other folders)
