[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-social-sdk"
version = "0.2.0"
description = "Python SDK for Agent Social messaging platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["agent", "messaging", "social", "sdk"]
dependencies = []

[project.optional-dependencies]
ws = ["websocket-client>=1.6.0"]

[tool.setuptools]
py-modules = ["agent_social"]
